# llm_api_converter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  DEPLOYMENT.md  README.md  README.zh.md  TODO.md  apprunner.yaml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: release.yml
benches/: conversion_bench.rs
deployment/prometheus/: prometheus.yml
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.prebuilt  Dockerfile.ptc  Dockerfile.release
docs/: DEPLOYMENT.md  PRODUCT_MAP.md
scripts/: apprunner-status.sh  build-docker.sh  create-api-key.sh  deploy-apprunner.sh
src/: lib.rs  logging.rs  main.rs
src/api/: chat_completions.rs  event_logging.rs  health.rs  messages.rs  mod.rs  models.rs
src/config/: aws.rs  mod.rs  settings.rs
src/converters/: anthropic_to_bedrock.rs  anthropic_to_gemini.rs  bedrock_to_anthropic.rs  bedrock_to_openai.rs  gemini_to_anthropic.rs  gemini_to_openai.rs  mod.rs  openai_to_bedrock.rs  openai_to_gemini.rs
src/db/: dynamodb.rs  dynamodb_backend.rs  mod.rs  models.rs  sqlite_backend.rs  storage.rs
src/db/repositories/: api_key.rs  mod.rs  model_mapping.rs  usage.rs
src/error/: mod.rs  types.rs
src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
src/schemas/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs
src/server/: app.rs  mod.rs  routes.rs  state.rs
src/services/: bedrock.rs  bedrock_provider.rs  deepseek_provider.rs  gemini.rs  gemini_provider.rs  mod.rs  openai_provider.rs  prompt_cache.rs  provider.rs  provider_router.rs  usage_tracker.rs
src/services/backend_pool/: credential.rs  mod.rs  pool.rs  strategy.rs
src/services/ptc/: exceptions.rs  mod.rs  runner.rs  sandbox.rs  service.rs
src/utils/: mod.rs  retry.rs  string.rs  timeout.rs  tool_name_mapper.rs
