[package]
name = "llm-api-converter"
version = "0.1.0"
edition = "2021"
authors = ["LLM API Converter Contributors"]
description = "High-performance LLM API gateway that unifies different AI provider APIs (Anthropic, OpenAI, Bedrock, etc.)"
license = "MIT"
repository = "https://github.com/yourusername/llm_api_converter"
keywords = ["llm", "api", "proxy", "anthropic", "openai", "bedrock"]
categories = ["web-programming", "api-bindings"]
default-run = "llm-api-converter"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization & validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# AWS SDK
aws-config = "1.1"
aws-sdk-bedrockruntime = "1.11"
aws-sdk-dynamodb = "1.11"
aws-smithy-runtime-api = "1.1"

# Docker API
bollard = "0.16"
tar = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Monitoring
prometheus = "0.13"

# JWT authentication
jsonwebtoken = "9.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Random number generation (for jitter)
rand = "0.8"

# Base64 encoding/decoding
base64 = "0.22"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }
aws-smithy-types = "1.3.6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "conversion_bench"
harness = false

[[bin]]
name = "create_api_key"
path = "src/bin/create_api_key.rs"

[[bin]]
name = "setup_tables"
path = "src/bin/setup_tables.rs"
